gatekeeper/constraints/disallow-root-user.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowedUsers
metadata:
  name: disallow-root-user
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: ["kube-system", "monitoring", "argocd", "gatekeeper-system", "external-secrets"]
  parameters:
    runAsUser:
      rule: MustRunAsNonRoot
