gatekeeper/constraints/max-replicas.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sMaxReplicaCount
metadata:
  name: max-replicas
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
    excludedNamespaces: ["kube-system", "monitoring", "argocd", "gatekeeper-system", "external-secrets"]
  parameters:
    maxReplicas: 5
